# dalia

./: Cargo.toml  README.md
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: main.rs  structs.rs
src/: main.rs  structs.rs
ui/: index.html
ui/src/: app.rs
